webinar starting point

--- a/pom.xml
+++ b/pom.xml
@@ -64,8 +64,12 @@
                     </args>
                     <compilerPlugins>
                         <plugin>spring</plugin>
-                        <plugin>jpa</plugin>
+<!--                        <plugin>jpa</plugin>
+                        <plugin>all-open</plugin>-->
                     </compilerPlugins>
+<!--                    <pluginOptions>
+                        <option>all-open:annotation=javax.persistence.Entity</option>
+                    </pluginOptions>-->
                 </configuration>
                 <dependencies>
                     <dependency>
