--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/projects
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.username=root
+spring.datasource.password=root
 spring.datasource.driverClassName=org.postgresql.Driver
 
 spring.jpa.show-sql=true
