--- a/src/main/resources/db/postgres/Dockerfile
+++ b/src/main/resources/db/postgres/Dockerfile
@@ -1,4 +1,4 @@
 FROM library/postgres
-ENV POSTGRES_USER postgres
-ENV POSTGRES_PASSWORD postgres
+ENV POSTGRES_USER root
+ENV POSTGRES_PASSWORD root
 ENV POSTGRES_DB projects
