Best practices for entity declaration in Kotlin

--- a/pom.xml
+++ b/pom.xml
@@ -64,14 +64,14 @@
                     </args>
                     <compilerPlugins>
                         <plugin>spring</plugin>
-<!--                        <plugin>jpa</plugin>-->
-<!--                        <plugin>all-open</plugin>-->
+                        <plugin>jpa</plugin>
+                        <plugin>all-open</plugin>
                     </compilerPlugins>
-<!--                    <pluginOptions>-->
-<!--                        <option>all-open:annotation=javax.persistence.Entity</option>-->
-<!--                        <option>all-open:annotation=javax.persistence.MappedSuperclass</option>-->
-<!--                        <option>all-open:annotation=javax.persistence.Embeddable</option>-->
-<!--                    </pluginOptions>-->
+                    <pluginOptions>
+                        <option>all-open:annotation=javax.persistence.Entity</option>
+                        <option>all-open:annotation=javax.persistence.MappedSuperclass</option>
+                        <option>all-open:annotation=javax.persistence.Embeddable</option>
+                    </pluginOptions>
                 </configuration>
                 <dependencies>
                     <dependency>
