--- a/src/main/resources/db/postgres/Dockerfile
+++ b/src/main/resources/db/postgres/Dockerfile
@@ -1,4 +1,4 @@
 FROM library/postgres
-ENV POSTGRES_USER root
-ENV POSTGRES_PASSWORD root
+ENV POSTGRES_USER projects
+ENV POSTGRES_PASSWORD projects
 ENV POSTGRES_DB projects
